fixed default header contrast

--- a/css/custom.css
+++ b/css/custom.css
@@ -292,7 +292,7 @@ body { font-size: 2em }
     --text-color-brighter: #DDDDDD;
     --secondary-bg-color: #FBFB07;
     --secondary-border-color: #898937;
-    --header-bg-color: #B3B3B3;
+    --header-bg-color: #939393;
     --header-text-color: #FFFFFF;
     --button-text-color: #4C4C4C;
     --current-tag-color: #FF0000;
